--- a/PokemonWebApi/appsettings.json
+++ b/PokemonWebApi/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;database=PokemonWebApi;uid=SA;password=MyPassWord0@;TrustServerCertificate=True;Encrypt=false"
+        "DefaultConnection": "Server=localhost;database=PokemonWebApi;uid=SA;password=DockerMyPassWord1;TrustServerCertificate=True;Encrypt=false"
     },
 
 
