--- a/PokemonWebApi/PokemonWebApi.csproj
+++ b/PokemonWebApi/PokemonWebApi.csproj
@@ -21,6 +21,8 @@
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +31,7 @@
     <None Remove="Data\" />
     <None Remove="Interfaces\" />
     <None Remove="Repositories \" />
+    <None Remove="Helper\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
@@ -36,5 +39,6 @@
     <Folder Include="Data\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Repositories \" />
+    <Folder Include="Helper\" />
   </ItemGroup>
 </Project>
