Adding Connection String for HrgBrnach and database

--- a/PokemonWebApi/appsettings.json
+++ b/PokemonWebApi/appsettings.json
@@ -1,14 +1,17 @@
 ﻿{
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;database=PokemonWebApi;uid=SA;password=DockerMyPassWord1;TrustServerCertificate=True;Encrypt=false"
-    },
+  //"ConnectionStrings": {
+  //    "DefaultConnection": "Server=localhost;database=PokemonWebApi;uid=SA;password=DockerMyPassWord1;TrustServerCertificate=True;Encrypt=false"
+  //},
 
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DEV-GHAFOURI;Initial Catalog=Pokemon;TrustServerCertificate=True;Trusted_Connection=true"
+  },
 
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
